2007 1er tour legislative

--- a/Jupyter Exercice/[Pandas] Les tendances de votes par bureau de vote pour les législatives (1er tour de 2012) - 1.ipynb
+++ b/Jupyter Exercice/[Pandas] Les tendances de votes par bureau de vote pour les législatives (1er tour de 2012) - 1.ipynb
@@ -617,7 +617,18 @@
    "outputs": [],
    "source": [
     "# Inner Join\n",
-    "df_INNER_JOIN = pd.merge(df_geo, df_votes, on=['commune_code','N° de bureau de vote'])"
+    "df_INNER_JOIN = pd.merge(df_geo, df_votes, on=['commune_code','N° de bureau de vote'])\n",
+    "\n",
+    "df=df_INNER_JOIN.groupby(['commune_code', 'N° de bureau de vote'])['Nombre de voix du candidat'].idxmax()\n",
+    "# df_votes.groupby(['Code Commune (Insee Code)', 'N° de bureau de vote'])['Nombre de voix du candidat'].max()\n",
+    "\n",
+    "list_index_le_plus_vote=df.to_frame()['Nombre de voix du candidat'].tolist()\n",
+    "\n",
+    "\n",
+    "df_le_plus_vote= pd.DataFrame(df_INNER_JOIN,\n",
+    "                  index=list_index_le_plus_vote)\n",
+    "\n",
+    "df_le_plus_vote"
    ]
   },
   {
@@ -627,7 +638,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_INNER_JOIN"
+    "# df_INNER_JOIN2"
    ]
   },
   {
@@ -1059,424 +1070,6 @@
    "outputs": [],
    "source": [
     "df_INNER_JOIN2.to_excel('DataFrame pour les législatives (1er tour de 2012)/3)Les tendances de votes avec cordonnées pour les législatives (1er tour de 2012)_final_md.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "3fd21191",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>commune_code</th>\n",
-       "      <th>libelle</th>\n",
-       "      <th>N° de bureau de vote</th>\n",
-       "      <th>libelle.1</th>\n",
-       "      <th>code_postal</th>\n",
-       "      <th>commune</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>Nom de la commune</th>\n",
-       "      <th>N° de circonscription</th>\n",
-       "      <th>N° de canton</th>\n",
-       "      <th>Inscrits</th>\n",
-       "      <th>Votants</th>\n",
-       "      <th>Exprimés</th>\n",
-       "      <th>N° de dépôt du candidat</th>\n",
-       "      <th>Nom du candidat</th>\n",
-       "      <th>Prénom du candidat</th>\n",
-       "      <th>Code nuance du candidat</th>\n",
-       "      <th>Nombre de voix du candidat</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1001</td>\n",
-       "      <td>L'Abergement-Clémenciat</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Bureau 1</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>ABERGEMENT CLEMENCIAT</td>\n",
-       "      <td>4.920902</td>\n",
-       "      <td>46.150784</td>\n",
-       "      <td>L'Abergement-Clémenciat</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>595.0</td>\n",
-       "      <td>370.0</td>\n",
-       "      <td>364.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>VOISIN</td>\n",
-       "      <td>Michel</td>\n",
-       "      <td>UMP</td>\n",
-       "      <td>129.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1002</td>\n",
-       "      <td>L'Abergement-de-Varey</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Mairie</td>\n",
-       "      <td>1640</td>\n",
-       "      <td>L'ABERGEMENT DE VAREY</td>\n",
-       "      <td>5.423436</td>\n",
-       "      <td>46.007249</td>\n",
-       "      <td>L'Abergement-de-Varey</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>216.0</td>\n",
-       "      <td>138.0</td>\n",
-       "      <td>133.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>EXPOSITO</td>\n",
-       "      <td>Josiane</td>\n",
-       "      <td>SOC</td>\n",
-       "      <td>46.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1004</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>1</td>\n",
-       "      <td>B1 - ESPACE 1500</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>AMBERIEU-EN-BUGEY</td>\n",
-       "      <td>5.348146</td>\n",
-       "      <td>45.960048</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1029.0</td>\n",
-       "      <td>531.0</td>\n",
-       "      <td>528.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>EXPOSITO</td>\n",
-       "      <td>Josiane</td>\n",
-       "      <td>SOC</td>\n",
-       "      <td>198.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1004</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>2</td>\n",
-       "      <td>B2 - ESPACE 1500</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>AMBERIEU-EN-BUGEY</td>\n",
-       "      <td>5.348146</td>\n",
-       "      <td>45.960048</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1071.0</td>\n",
-       "      <td>589.0</td>\n",
-       "      <td>578.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>ABAD</td>\n",
-       "      <td>Damien</td>\n",
-       "      <td>UMP</td>\n",
-       "      <td>200.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1004</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>3</td>\n",
-       "      <td>B3 - Château des Echelles</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>AMBERIEU-EN-BUGEY</td>\n",
-       "      <td>5.364613</td>\n",
-       "      <td>45.955227</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1019.0</td>\n",
-       "      <td>608.0</td>\n",
-       "      <td>601.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>EXPOSITO</td>\n",
-       "      <td>Josiane</td>\n",
-       "      <td>SOC</td>\n",
-       "      <td>207.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>557970</th>\n",
-       "      <td>58413</td>\n",
-       "      <td>95680</td>\n",
-       "      <td>Villiers-le-Bel</td>\n",
-       "      <td>11</td>\n",
-       "      <td>LE VILLAGE - ECOLE MARIE CURIE</td>\n",
-       "      <td>95400</td>\n",
-       "      <td>VILLIERS-LE-BEL</td>\n",
-       "      <td>2.387895</td>\n",
-       "      <td>49.006733</td>\n",
-       "      <td>Villiers-le-Bel</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1223.0</td>\n",
-       "      <td>488.0</td>\n",
-       "      <td>473.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>PUPPONI</td>\n",
-       "      <td>François</td>\n",
-       "      <td>SOC</td>\n",
-       "      <td>204.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>557982</th>\n",
-       "      <td>58414</td>\n",
-       "      <td>95680</td>\n",
-       "      <td>Villiers-le-Bel</td>\n",
-       "      <td>12</td>\n",
-       "      <td>LES CARREAUX - GROUPE SCOLAIRE JEAN JAURES</td>\n",
-       "      <td>95400</td>\n",
-       "      <td>VILLIERS-LE-BEL</td>\n",
-       "      <td>2.415228</td>\n",
-       "      <td>49.001856</td>\n",
-       "      <td>Villiers-le-Bel</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>950.0</td>\n",
-       "      <td>438.0</td>\n",
-       "      <td>422.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>PUPPONI</td>\n",
-       "      <td>François</td>\n",
-       "      <td>SOC</td>\n",
-       "      <td>203.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>557994</th>\n",
-       "      <td>58415</td>\n",
-       "      <td>95680</td>\n",
-       "      <td>Villiers-le-Bel</td>\n",
-       "      <td>13</td>\n",
-       "      <td>DERRIERE LES MURS - ECOLE MATERNELLE FERDINAND...</td>\n",
-       "      <td>95400</td>\n",
-       "      <td>VILLIERS-LE-BEL</td>\n",
-       "      <td>2.395384</td>\n",
-       "      <td>49.003751</td>\n",
-       "      <td>Villiers-le-Bel</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>658.0</td>\n",
-       "      <td>236.0</td>\n",
-       "      <td>225.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>PUPPONI</td>\n",
-       "      <td>François</td>\n",
-       "      <td>SOC</td>\n",
-       "      <td>143.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>558002</th>\n",
-       "      <td>58416</td>\n",
-       "      <td>95682</td>\n",
-       "      <td>Villiers-le-Sec</td>\n",
-       "      <td>1</td>\n",
-       "      <td>MAIRIE</td>\n",
-       "      <td>95720</td>\n",
-       "      <td>VILLIERS-LE-SEC</td>\n",
-       "      <td>2.390021</td>\n",
-       "      <td>49.072537</td>\n",
-       "      <td>Villiers-le-Sec</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>BLAZY</td>\n",
-       "      <td>Jean-Pierre</td>\n",
-       "      <td>SOC</td>\n",
-       "      <td>31.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>558015</th>\n",
-       "      <td>58417</td>\n",
-       "      <td>95690</td>\n",
-       "      <td>Wy-dit-Joli-Village</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Bureau 1</td>\n",
-       "      <td>95420</td>\n",
-       "      <td>WY-DIT-JOLI-VILLAGE</td>\n",
-       "      <td>1.835615</td>\n",
-       "      <td>49.102958</td>\n",
-       "      <td>Wy-dit-Joli-Village</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>277.0</td>\n",
-       "      <td>186.0</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>HOUILLON</td>\n",
-       "      <td>Philippe</td>\n",
-       "      <td>UMP</td>\n",
-       "      <td>85.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>51402 rows × 20 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Unnamed: 0 commune_code                  libelle N° de bureau de vote  \\\n",
-       "1                0         1001  L'Abergement-Clémenciat                    1   \n",
-       "18               1         1002    L'Abergement-de-Varey                    1   \n",
-       "31               2         1004        Ambérieu-en-Bugey                    1   \n",
-       "46               3         1004        Ambérieu-en-Bugey                    2   \n",
-       "57               4         1004        Ambérieu-en-Bugey                    3   \n",
-       "...            ...          ...                      ...                  ...   \n",
-       "557970       58413        95680          Villiers-le-Bel                   11   \n",
-       "557982       58414        95680          Villiers-le-Bel                   12   \n",
-       "557994       58415        95680          Villiers-le-Bel                   13   \n",
-       "558002       58416        95682          Villiers-le-Sec                    1   \n",
-       "558015       58417        95690      Wy-dit-Joli-Village                    1   \n",
-       "\n",
-       "                                                libelle.1 code_postal  \\\n",
-       "1                                                Bureau 1        1400   \n",
-       "18                                                 Mairie        1640   \n",
-       "31                                       B1 - ESPACE 1500        1500   \n",
-       "46                                       B2 - ESPACE 1500        1500   \n",
-       "57                              B3 - Château des Echelles        1500   \n",
-       "...                                                   ...         ...   \n",
-       "557970                     LE VILLAGE - ECOLE MARIE CURIE       95400   \n",
-       "557982         LES CARREAUX - GROUPE SCOLAIRE JEAN JAURES       95400   \n",
-       "557994  DERRIERE LES MURS - ECOLE MATERNELLE FERDINAND...       95400   \n",
-       "558002                                             MAIRIE       95720   \n",
-       "558015                                           Bureau 1       95420   \n",
-       "\n",
-       "                      commune  longitude   latitude        Nom de la commune  \\\n",
-       "1       ABERGEMENT CLEMENCIAT   4.920902  46.150784  L'Abergement-Clémenciat   \n",
-       "18      L'ABERGEMENT DE VAREY   5.423436  46.007249    L'Abergement-de-Varey   \n",
-       "31          AMBERIEU-EN-BUGEY   5.348146  45.960048        Ambérieu-en-Bugey   \n",
-       "46          AMBERIEU-EN-BUGEY   5.348146  45.960048        Ambérieu-en-Bugey   \n",
-       "57          AMBERIEU-EN-BUGEY   5.364613  45.955227        Ambérieu-en-Bugey   \n",
-       "...                       ...        ...        ...                      ...   \n",
-       "557970        VILLIERS-LE-BEL   2.387895  49.006733          Villiers-le-Bel   \n",
-       "557982        VILLIERS-LE-BEL   2.415228  49.001856          Villiers-le-Bel   \n",
-       "557994        VILLIERS-LE-BEL   2.395384  49.003751          Villiers-le-Bel   \n",
-       "558002        VILLIERS-LE-SEC   2.390021  49.072537          Villiers-le-Sec   \n",
-       "558015    WY-DIT-JOLI-VILLAGE   1.835615  49.102958      Wy-dit-Joli-Village   \n",
-       "\n",
-       "        N° de circonscription  N° de canton  Inscrits  Votants  Exprimés  \\\n",
-       "1                         4.0          10.0     595.0    370.0     364.0   \n",
-       "18                        5.0           1.0     216.0    138.0     133.0   \n",
-       "31                        5.0           1.0    1029.0    531.0     528.0   \n",
-       "46                        5.0           1.0    1071.0    589.0     578.0   \n",
-       "57                        5.0           1.0    1019.0    608.0     601.0   \n",
-       "...                       ...           ...       ...      ...       ...   \n",
-       "557970                    8.0          35.0    1223.0    488.0     473.0   \n",
-       "557982                    8.0          35.0     950.0    438.0     422.0   \n",
-       "557994                    8.0          35.0     658.0    236.0     225.0   \n",
-       "558002                    9.0          15.0      95.0     72.0      72.0   \n",
-       "558015                    1.0          16.0     277.0    186.0     185.0   \n",
-       "\n",
-       "        N° de dépôt du candidat Nom du candidat Prénom du candidat  \\\n",
-       "1                           9.0          VOISIN             Michel   \n",
-       "18                         41.0        EXPOSITO            Josiane   \n",
-       "31                         41.0        EXPOSITO            Josiane   \n",
-       "46                         48.0            ABAD             Damien   \n",
-       "57                         41.0        EXPOSITO            Josiane   \n",
-       "...                         ...             ...                ...   \n",
-       "557970                     70.0         PUPPONI           François   \n",
-       "557982                     70.0         PUPPONI           François   \n",
-       "557994                     70.0         PUPPONI           François   \n",
-       "558002                     32.0           BLAZY        Jean-Pierre   \n",
-       "558015                      8.0        HOUILLON           Philippe   \n",
-       "\n",
-       "       Code nuance du candidat  Nombre de voix du candidat  \n",
-       "1                          UMP                       129.0  \n",
-       "18                         SOC                        46.0  \n",
-       "31                         SOC                       198.0  \n",
-       "46                         UMP                       200.0  \n",
-       "57                         SOC                       207.0  \n",
-       "...                        ...                         ...  \n",
-       "557970                     SOC                       204.0  \n",
-       "557982                     SOC                       203.0  \n",
-       "557994                     SOC                       143.0  \n",
-       "558002                     SOC                        31.0  \n",
-       "558015                     UMP                        85.0  \n",
-       "\n",
-       "[51402 rows x 20 columns]"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df=df_INNER_JOIN.groupby(['commune_code', 'N° de bureau de vote'])['Nombre de voix du candidat'].idxmax()\n",
-    "# df_votes.groupby(['Code Commune (Insee Code)', 'N° de bureau de vote'])['Nombre de voix du candidat'].max()\n",
-    "\n",
-    "list_index_le_plus_vote=df.to_frame()['Nombre de voix du candidat'].tolist()\n",
-    "\n",
-    "\n",
-    "df_le_plus_vote= pd.DataFrame(df_INNER_JOIN,\n",
-    "                  index=list_index_le_plus_vote)\n",
-    "\n",
-    "df_le_plus_vote"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "f93a4b9c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_le_plus_vote.to_excel('Les tendances de votes avec cordonnées pour les législatives (1er tour de 2012).xlsx')"
    ]
   },
   {
