--- a/Jupyter Exercice/[Pandas] Les tendances de votes par bureau de vote pour les présidentielles (1er tour de 2017) - 2.ipynb
+++ b/Jupyter Exercice/[Pandas] Les tendances de votes par bureau de vote pour les présidentielles (1er tour de 2017) - 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "05856a5b",
    "metadata": {},
    "outputs": [],
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "bb4403ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "excel_final=pd.ExcelFile('Les tendances de votes avec cordonnées pour les présidentielles (1er tour de 2017).xlsx')"
+    "excel_final=pd.ExcelFile('EXCEL/Les tendances de votes avec cordonnées pour les présidentielles (1er tour de 2017).xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "ab2a66e2",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "7b3904ec",
    "metadata": {},
    "outputs": [],
@@ -67,418 +67,41 @@
     "\n",
     "\n",
     "# df.loc[(df.Event == 'Dance'),'Event']='Hip-Hop'\n",
-    "df_commune.to_excel('Les tendances de votes avec cordonnées pour les présidentiells (1er tour de 2017).xlsx')"
+    "# df_commune.to_excel('Les tendances de votes avec cordonnées pour les présidentiells (1er tour de 2017).xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "fea86dbb",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>commune_code</th>\n",
-       "      <th>libelle</th>\n",
-       "      <th>Code du b.vote</th>\n",
-       "      <th>libelle.1</th>\n",
-       "      <th>code_postal</th>\n",
-       "      <th>commune</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>Libellé du département</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Sexe.10</th>\n",
-       "      <th>Nom.10</th>\n",
-       "      <th>Prénom.10</th>\n",
-       "      <th>Voix.10</th>\n",
-       "      <th>% Voix/Ins.10</th>\n",
-       "      <th>% Voix/Exp.10</th>\n",
-       "      <th>Unnamed: 98</th>\n",
-       "      <th>NOM_candidat_le_plus_voté</th>\n",
-       "      <th>PRENOM_candidat_le_plus_voté</th>\n",
-       "      <th>% Voix/Exp_le_plus_voté</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1001</td>\n",
-       "      <td>L'Abergement-Clémenciat</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Bureau 1</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>ABERGEMENT CLEMENCIAT</td>\n",
-       "      <td>4.920902</td>\n",
-       "      <td>46.150784</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>FILLON</td>\n",
-       "      <td>François</td>\n",
-       "      <td>110</td>\n",
-       "      <td>18.39</td>\n",
-       "      <td>22.22</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>LE PEN</td>\n",
-       "      <td>Marine</td>\n",
-       "      <td>25.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1002</td>\n",
-       "      <td>L'Abergement-de-Varey</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Mairie</td>\n",
-       "      <td>1640</td>\n",
-       "      <td>L'ABERGEMENT DE VAREY</td>\n",
-       "      <td>5.423436</td>\n",
-       "      <td>46.007249</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>FILLON</td>\n",
-       "      <td>François</td>\n",
-       "      <td>34</td>\n",
-       "      <td>16.27</td>\n",
-       "      <td>19.32</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>LE PEN</td>\n",
-       "      <td>Marine</td>\n",
-       "      <td>27.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1004</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>1</td>\n",
-       "      <td>B1 - ESPACE 1500</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>AMBERIEU-EN-BUGEY</td>\n",
-       "      <td>5.348146</td>\n",
-       "      <td>45.960048</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>FILLON</td>\n",
-       "      <td>François</td>\n",
-       "      <td>116</td>\n",
-       "      <td>10.39</td>\n",
-       "      <td>13.49</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>LE PEN</td>\n",
-       "      <td>Marine</td>\n",
-       "      <td>27.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1004</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>2</td>\n",
-       "      <td>B2 - ESPACE 1500</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>AMBERIEU-EN-BUGEY</td>\n",
-       "      <td>5.348146</td>\n",
-       "      <td>45.960048</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>FILLON</td>\n",
-       "      <td>François</td>\n",
-       "      <td>124</td>\n",
-       "      <td>10.99</td>\n",
-       "      <td>14.59</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>LE PEN</td>\n",
-       "      <td>Marine</td>\n",
-       "      <td>27.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1004</td>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>3</td>\n",
-       "      <td>B3 - Château des Echelles</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>AMBERIEU-EN-BUGEY</td>\n",
-       "      <td>5.364613</td>\n",
-       "      <td>45.955227</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>FILLON</td>\n",
-       "      <td>François</td>\n",
-       "      <td>149</td>\n",
-       "      <td>13.35</td>\n",
-       "      <td>17.05</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>LE PEN</td>\n",
-       "      <td>Marine</td>\n",
-       "      <td>24.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55013</th>\n",
-       "      <td>55013</td>\n",
-       "      <td>95680</td>\n",
-       "      <td>Villiers-le-Bel</td>\n",
-       "      <td>11</td>\n",
-       "      <td>LE VILLAGE - ECOLE MARIE CURIE</td>\n",
-       "      <td>95400</td>\n",
-       "      <td>VILLIERS-LE-BEL</td>\n",
-       "      <td>2.387895</td>\n",
-       "      <td>49.006733</td>\n",
-       "      <td>Val-d'Oise</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>FILLON</td>\n",
-       "      <td>François</td>\n",
-       "      <td>132</td>\n",
-       "      <td>11.01</td>\n",
-       "      <td>15.83</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MÉLENCHON</td>\n",
-       "      <td>Jean-Luc</td>\n",
-       "      <td>33.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55014</th>\n",
-       "      <td>55014</td>\n",
-       "      <td>95680</td>\n",
-       "      <td>Villiers-le-Bel</td>\n",
-       "      <td>12</td>\n",
-       "      <td>LES CARREAUX - GROUPE SCOLAIRE JEAN JAURES</td>\n",
-       "      <td>95400</td>\n",
-       "      <td>VILLIERS-LE-BEL</td>\n",
-       "      <td>2.415228</td>\n",
-       "      <td>49.001856</td>\n",
-       "      <td>Val-d'Oise</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>FILLON</td>\n",
-       "      <td>François</td>\n",
-       "      <td>87</td>\n",
-       "      <td>8.87</td>\n",
-       "      <td>13.51</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MÉLENCHON</td>\n",
-       "      <td>Jean-Luc</td>\n",
-       "      <td>29.97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55015</th>\n",
-       "      <td>55015</td>\n",
-       "      <td>95680</td>\n",
-       "      <td>Villiers-le-Bel</td>\n",
-       "      <td>13</td>\n",
-       "      <td>DERRIERE LES MURS - ECOLE MATERNELLE FERDINAND...</td>\n",
-       "      <td>95400</td>\n",
-       "      <td>VILLIERS-LE-BEL</td>\n",
-       "      <td>2.395384</td>\n",
-       "      <td>49.003751</td>\n",
-       "      <td>Val-d'Oise</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>FILLON</td>\n",
-       "      <td>François</td>\n",
-       "      <td>28</td>\n",
-       "      <td>3.93</td>\n",
-       "      <td>6.78</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MÉLENCHON</td>\n",
-       "      <td>Jean-Luc</td>\n",
-       "      <td>46.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55016</th>\n",
-       "      <td>55016</td>\n",
-       "      <td>95682</td>\n",
-       "      <td>Villiers-le-Sec</td>\n",
-       "      <td>1</td>\n",
-       "      <td>MAIRIE</td>\n",
-       "      <td>95720</td>\n",
-       "      <td>VILLIERS-LE-SEC</td>\n",
-       "      <td>2.390021</td>\n",
-       "      <td>49.072537</td>\n",
-       "      <td>Val-d'Oise</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>FILLON</td>\n",
-       "      <td>François</td>\n",
-       "      <td>21</td>\n",
-       "      <td>17.50</td>\n",
-       "      <td>19.81</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MACRON</td>\n",
-       "      <td>Emmanuel</td>\n",
-       "      <td>24.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55017</th>\n",
-       "      <td>55017</td>\n",
-       "      <td>95690</td>\n",
-       "      <td>Wy-dit-Joli-Village</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Bureau 1</td>\n",
-       "      <td>95420</td>\n",
-       "      <td>WY-DIT-JOLI-VILLAGE</td>\n",
-       "      <td>1.835615</td>\n",
-       "      <td>49.102958</td>\n",
-       "      <td>Val-d'Oise</td>\n",
-       "      <td>...</td>\n",
-       "      <td>M</td>\n",
-       "      <td>FILLON</td>\n",
-       "      <td>François</td>\n",
-       "      <td>72</td>\n",
-       "      <td>23.30</td>\n",
-       "      <td>27.59</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>FILLON</td>\n",
-       "      <td>François</td>\n",
-       "      <td>27.59</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>55018 rows × 109 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       Unnamed: 0  commune_code                  libelle Code du b.vote  \\\n",
-       "0               0          1001  L'Abergement-Clémenciat              1   \n",
-       "1               1          1002    L'Abergement-de-Varey              1   \n",
-       "2               2          1004        Ambérieu-en-Bugey              1   \n",
-       "3               3          1004        Ambérieu-en-Bugey              2   \n",
-       "4               4          1004        Ambérieu-en-Bugey              3   \n",
-       "...           ...           ...                      ...            ...   \n",
-       "55013       55013         95680          Villiers-le-Bel             11   \n",
-       "55014       55014         95680          Villiers-le-Bel             12   \n",
-       "55015       55015         95680          Villiers-le-Bel             13   \n",
-       "55016       55016         95682          Villiers-le-Sec              1   \n",
-       "55017       55017         95690      Wy-dit-Joli-Village              1   \n",
-       "\n",
-       "                                               libelle.1 code_postal  \\\n",
-       "0                                               Bureau 1        1400   \n",
-       "1                                                 Mairie        1640   \n",
-       "2                                       B1 - ESPACE 1500        1500   \n",
-       "3                                       B2 - ESPACE 1500        1500   \n",
-       "4                              B3 - Château des Echelles        1500   \n",
-       "...                                                  ...         ...   \n",
-       "55013                     LE VILLAGE - ECOLE MARIE CURIE       95400   \n",
-       "55014         LES CARREAUX - GROUPE SCOLAIRE JEAN JAURES       95400   \n",
-       "55015  DERRIERE LES MURS - ECOLE MATERNELLE FERDINAND...       95400   \n",
-       "55016                                             MAIRIE       95720   \n",
-       "55017                                           Bureau 1       95420   \n",
-       "\n",
-       "                     commune longitude   latitude Libellé du département  ...  \\\n",
-       "0      ABERGEMENT CLEMENCIAT  4.920902  46.150784                    Ain  ...   \n",
-       "1      L'ABERGEMENT DE VAREY  5.423436  46.007249                    Ain  ...   \n",
-       "2          AMBERIEU-EN-BUGEY  5.348146  45.960048                    Ain  ...   \n",
-       "3          AMBERIEU-EN-BUGEY  5.348146  45.960048                    Ain  ...   \n",
-       "4          AMBERIEU-EN-BUGEY  5.364613  45.955227                    Ain  ...   \n",
-       "...                      ...       ...        ...                    ...  ...   \n",
-       "55013        VILLIERS-LE-BEL  2.387895  49.006733             Val-d'Oise  ...   \n",
-       "55014        VILLIERS-LE-BEL  2.415228  49.001856             Val-d'Oise  ...   \n",
-       "55015        VILLIERS-LE-BEL  2.395384  49.003751             Val-d'Oise  ...   \n",
-       "55016        VILLIERS-LE-SEC  2.390021  49.072537             Val-d'Oise  ...   \n",
-       "55017    WY-DIT-JOLI-VILLAGE  1.835615  49.102958             Val-d'Oise  ...   \n",
-       "\n",
-       "       Sexe.10  Nom.10  Prénom.10 Voix.10  % Voix/Ins.10  % Voix/Exp.10  \\\n",
-       "0            M  FILLON   François     110          18.39          22.22   \n",
-       "1            M  FILLON   François      34          16.27          19.32   \n",
-       "2            M  FILLON   François     116          10.39          13.49   \n",
-       "3            M  FILLON   François     124          10.99          14.59   \n",
-       "4            M  FILLON   François     149          13.35          17.05   \n",
-       "...        ...     ...        ...     ...            ...            ...   \n",
-       "55013        M  FILLON   François     132          11.01          15.83   \n",
-       "55014        M  FILLON   François      87           8.87          13.51   \n",
-       "55015        M  FILLON   François      28           3.93           6.78   \n",
-       "55016        M  FILLON   François      21          17.50          19.81   \n",
-       "55017        M  FILLON   François      72          23.30          27.59   \n",
-       "\n",
-       "       Unnamed: 98  NOM_candidat_le_plus_voté  PRENOM_candidat_le_plus_voté  \\\n",
-       "0           1000.0                     LE PEN                        Marine   \n",
-       "1              NaN                     LE PEN                        Marine   \n",
-       "2              NaN                     LE PEN                        Marine   \n",
-       "3              NaN                     LE PEN                        Marine   \n",
-       "4              NaN                     LE PEN                        Marine   \n",
-       "...            ...                        ...                           ...   \n",
-       "55013          NaN                  MÉLENCHON                      Jean-Luc   \n",
-       "55014          NaN                  MÉLENCHON                      Jean-Luc   \n",
-       "55015          NaN                  MÉLENCHON                      Jean-Luc   \n",
-       "55016          NaN                     MACRON                      Emmanuel   \n",
-       "55017          NaN                     FILLON                      François   \n",
-       "\n",
-       "       % Voix/Exp_le_plus_voté  \n",
-       "0                        25.45  \n",
-       "1                        27.27  \n",
-       "2                        27.09  \n",
-       "3                        27.53  \n",
-       "4                        24.94  \n",
-       "...                        ...  \n",
-       "55013                    33.93  \n",
-       "55014                    29.97  \n",
-       "55015                    46.49  \n",
-       "55016                    24.53  \n",
-       "55017                    27.59  \n",
-       "\n",
-       "[55018 rows x 109 columns]"
+       "0        25.45\n",
+       "1        27.27\n",
+       "2        27.09\n",
+       "3        27.53\n",
+       "4        24.94\n",
+       "         ...  \n",
+       "55010    33.93\n",
+       "55011    29.97\n",
+       "55012    46.49\n",
+       "55013    24.53\n",
+       "55014    27.59\n",
+       "Length: 55015, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_commune"
+    "# df_commune\n",
+    "# df_voix_exp.idxmax(axis=1).str.replace('% Voix/Exp','Nom')\n",
+    "df_voix_exp.max(axis=1)"
    ]
   }
  ],
